...
              ),

              const SizedBox(height: 60),

              const AuthHeader(
                title: 'Welcome!',
                subtitle: 'Login'
              ),
            
              const SizedBox(height: 30),

              ResQFoodTextField(
                label: 'Username',
...
                      );
                    },
                    borderRadius: BorderRadius.circular(4),
                    child: Padding(
                      padding: const EdgeInsets.symmetric(horizontal: 4, vertical: 3),
                      child: Text(
                        "Sign up",
                        style: TextStyle(
                          fontWeight: FontWeight.bold,
                          fontSize: 15,
                          color: Theme.of(context).colorScheme.primary,
                          decoration: TextDecoration.underline,
                          decorationColor: Theme.of(context).colorScheme.primary,
...
