...
              isDarkMode: isDarkMode,
            ),
            const PopupMenuDivider(),
            _buildPopupItem(
              value: 'logout',
              icon: Icons.logout,
              text: "Logout",
              color: Colors.red,
              highContrast: highContrast,
              isDarkMode: isDarkMode,
            ),
          ],
        ),
...
