...
                
                const SizedBox(height: 40),
                
                TextButton.icon(
                  onPressed: () => _handleLogout(context, authProvider),
                  icon: const Icon(Icons.logout, color: Colors.red),
                  label: const Text("Logout of ResQFood", style: TextStyle(color: Colors.red)),
                )
              ],
            );
          },
        ),
      ),
...
